Aprimora prompt da IA com persona e base de conhecimento

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
             <hr>
 
             <textarea id="duvidas-geradas-input" rows="5" placeholder="Cole aqui a lista de dúvidas gerada pela IA..."></textarea>
+            <button type="button" id="copiar-duvidas-btn" class="submit-button" style="margin-top: 10px; background-color: #6c757d;">Copiar Dúvidas</button>
 
             <button id="create-card-final-btn" class="submit-button">Criar Card</button>
         </div>
