--- a/index.html
+++ b/index.html
@@ -100,10 +100,15 @@
 
             <hr>
 
-            <textarea id="duvidas-geradas-input" rows="5" placeholder="Cole aqui a lista de dúvidas gerada pela IA..."></textarea>
+            <textarea id="duvidas-geradas-input" rows="5" placeholder="A lista de dúvidas completa gerada pela IA aparecerá aqui..."></textarea>
             <button type="button" id="copiar-duvidas-btn" class="submit-button" style="margin-top: 10px; background-color: #6c757d;">Copiar Dúvidas</button>
 
-            <button id="create-card-final-btn" class="submit-button">Criar Card</button>
+            <textarea id="resumo-gerado-input" rows="5" placeholder="O resumo para o cliente aparecerá aqui..." style="margin-top: 15px;"></textarea>
+
+            <div class="action-buttons" style="display: flex; gap: 10px; margin-top: 20px;">
+                <button id="create-card-final-btn" class="submit-button" style="width: 50%;">Criar Card</button>
+                <button id="gerar-resumo-btn" type="button" class="submit-button" style="width: 50%; background-color: #17a2b8;">Gerar Resumo para Cliente</button>
+            </div>
         </div>
     </div>
 
