Revert "feat(ui): implementa abas de análise e resumo no modal"
This reverts commit d23ef98c1488fc3da2edecffd1ab17cc1057ab79.

--- a/index.html
+++ b/index.html
@@ -145,31 +145,17 @@
                     <!-- Seção de Resumo da IA (Início) -->
 <div id="summary-section" class="hidden">
     <hr>
-<div class="summary-header">
-    <ul class="nav nav-tabs" id="analysis-tabs" role="tablist">
-        <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="analise-completa-tab" data-bs-toggle="tab" data-bs-target="#analise-completa-pane" type="button" role="tab" aria-controls="analise-completa-pane" aria-selected="true">Análise Completa</button>
-        </li>
-        <li class="nav-item" role="presentation">
-            <button class="nav-link" id="resumo-cliente-tab" data-bs-toggle="tab" data-bs-target="#resumo-cliente-pane" type="button" role="tab" aria-controls="resumo-cliente-pane" aria-selected="false">Resumo para Cliente</button>
-        </li>
-    </ul>
-    <button id="copy-summary-btn" class="submit-button hidden" style="width: auto; margin-top: 0;">Copiar</button>
-</div>
-
-<div id="summary-loader" class="loader-container">
-    <div class="loader"></div>
-    <p>Analisando o escopo e gerando o resumo...</p>
-</div>
-
-<div class="tab-content" id="analysis-tabs-content">
-    <div class="tab-pane fade show active" id="analise-completa-pane" role="tabpanel" aria-labelledby="analise-completa-tab">
-        <!-- Conteúdo da Análise Completa (bruta) será inserido aqui -->
+    <div class="summary-header">
+        <h4>Resumo da IA</h4>
+        <button id="copy-summary-btn" class="submit-button hidden" style="width: auto; margin-top: 0;">Copiar</button>
     </div>
-    <div class="tab-pane fade" id="resumo-cliente-pane" role="tabpanel" aria-labelledby="resumo-cliente-tab">
-        <!-- Conteúdo do Resumo para Cliente (limpo) será inserido aqui -->
+    <div id="summary-loader" class="loader-container">
+        <div class="loader"></div>
+        <p>Analisando o escopo e gerando o resumo...</p>
     </div>
-</div>
+    <div id="summary-content" class="hidden">
+        <!-- O conteúdo do resumo gerado pela IA será inserido aqui -->
+    </div>
 </div>
 <!-- Seção de Resumo da IA (Fim) -->
                     <textarea id="edit-escopo" class="edit-mode-field hidden" style="width: 100%; min-height: 120px;"></textarea>
