fix(ui): renderiza markdown no modal de criação de card

--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
 
             <hr>
 
-            <textarea id="duvidas-geradas-input" rows="5" placeholder="A lista de dúvidas completa gerada pela IA aparecerá aqui..."></textarea>
+            <div id="duvidas-geradas-output" class="ai-output-box" placeholder="A lista de dúvidas completa gerada pela IA aparecerá aqui..."></div>
             <button type="button" id="copiar-duvidas-btn" class="submit-button" style="margin-top: 10px; background-color: #6c757d;">Copiar Dúvidas</button>
 
             <div id="resumo-container" class="hidden">
                 <label for="resumo-output">Resumo para o cliente aparecerá aqui:</label>
-                <textarea id="resumo-output" rows="5" readonly></textarea>
+                <div id="resumo-output" class="ai-output-box" readonly></div>
             </div>
 
             <div class="action-buttons" style="display: flex; gap: 10px; margin-top: 20px;">
