feat(ui): implementa edição avançada de card com fluxo seguro

--- a/index.html
+++ b/index.html
@@ -123,9 +123,14 @@
             <div class="modal-header-actions">
                 <h2 id="detalhes-projeto">Nome do Projeto</h2>
                 <div class="header-buttons">
+                    <!-- Botões do Modo Visualização -->
                     <button id="gerar-resumo-detalhes-btn" class="submit-button" style="background-color: #17a2b8;">Gerar Análise</button>
                     <button id="editar-card-btn" class="submit-button">Editar</button>
-                    <button id="salvar-card-btn" class="submit-button hidden">Salvar</button>
+                    
+                    <!-- Botões do Modo Edição -->
+                    <button id="refazer-analise-btn" class="submit-button hidden" style="background-color: #fd7e14;" title="Refaz a análise de IA com base no escopo alterado">Refazer Análise</button>
+                    <button id="cancelar-edicao-btn" class="submit-button hidden" style="background-color: #6c757d;">Cancelar</button>
+                    <button id="salvar-card-btn" class="submit-button hidden" style="background-color: #28a745;">Salvar</button>
                 </div>
             </div>
 
